[package]
name = "scope-exit"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "The util to call procedure when exit current scope. scope exit. like defer in go."
readme = "README.md"
repository = "https://github.com/shylock-hg/scope-exit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
